# rust-MetalmanOS

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: main.rs
