[package]
authors = ["Michael Edelman <mike.edelman@gmail.com>"]
edition = "2021"
name = "metalmanos"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9"
x86_64 = "0.14"

[package.metadata.bootimage]
build-command = ["build"]

run-command = [
  "qemu-system-x86_64",
  "-drive",
  "format=raw,file={}",
]
